fix overflow error in css

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,9 @@
+body {
+    overflow: hidden;
+}
 .App {
     height: 100vh;
-    overflow-y: hidden;
+    overflow: hidden;
     min-height: 100vh;
     background-color: #000;
     font: 1.3rem Inconsolata, monospace;
